tests/NormalTests/paczka1/small_fuzzy/17959759.err
Error in line 2: dAA6l S640 77,3
Error in line 1: S459 S459 38,6
Error in line 13: lDv A790 25,32
Error in line 9: S459 S640 50,9
